微调符号和人名

--- a/我再也不会把孩子送去学校/5.学校教育对学习内驱力的影响.md
+++ b/我再也不会把孩子送去学校/5.学校教育对学习内驱力的影响.md
@@ -13,7 +13,7 @@
 
 **随着年龄的增长，削弱学习内驱力的主要因素是已有的知识。**还有一些次要因素，如(1)当前知识的“吸引力”下降，(2)大脑的实际老化。老化可能会导致神经网络的老化、突触削减、精神活力的减少等。这些都可以通过精神保健和学习本身来预防。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)和热情可以一直保持到百岁。在健康的生活方式中，保持大脑的活力比保持运动系统的活力更容易。
 
-一些求新欲可能是发育过程的一部分(例如，婴儿的品味探索阶段)。然而，这些过程并没有在我们试图引导年轻一代在教育课程中进行的探索中发挥重要作用。
+一些求新欲可能是发育过程的一部分（例如，婴儿的品味探索阶段）。然而，这些过程并没有在我们试图引导年轻一代在教育课程中进行的探索中发挥重要作用。
 
 知识本身就是学习内驱力最强大的[灭火器](https://supermemo.guru/wiki/Learn_drive)。这可以用我们对某本书的兴趣来说明。一本书初读时很有趣。我们很少有兴趣把这本书再读一遍。重读我们所知道的东西很少令人兴奋。随着时间的推移，在遗忘的作用下，这本书可能会再次变得有趣。被遗忘的书可以通过学习内驱力引导系统重新激活奖励回路。一旦知识建立起来，就失去了寻找新知识的动力。遗忘在其他方面也有帮助，比如收音机里一首歌的情绪影响。不同之处在于，音乐与陈述性记忆的关系要小得多，而与模式和美感的关系要大得多。就像美丽的日落。你不需要忘记一次日落去爱另一次日落。这就是为什么一首朗朗上口的曲子即使多次重放也能让人上瘾，而一首爵士或古典名乐即使不被反复播放，也能让人永生难忘。
 
@@ -21,7 +21,7 @@
 
 知识的增加会破坏求新欲。神经中枢随着年龄的增加不会削减一个人的求新欲。 这种求新欲也不会随着一个人的发展而泯灭。 但当一个人在某一个的知识领域的无知被填满后，他的求新欲也随之消散
 
-我们对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的理解带来的好消息是，学习内驱力可以在终生的激情教育中起作用。80岁的时候学习和15岁的时候一样有趣。
+我们对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的理解带来的好消息是，学习内驱力可以在终生的激情教育中起作用。80 岁的时候学习和 15 岁的时候一样有趣。
 
 ## 5.3 学习内驱力 与 学习
 
@@ -33,15 +33,15 @@
 
 打个比方说，老师把一段段知识扔给学生，希望他们能从中学到一些东西。通常情况并非如此。大多数课件材料在一个月内就用完了。一年后，只有重复、复习、重复和考试才能帮助部分知识在大脑中保存下来。基于[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)在拒绝不合适的知识或找到可以从已有的知识树中扩展出去的新知识方面是非常精确的。
 
-这是学校教育的最大弊病之一:学生们总是抱怨学校太无聊或太辛苦。学生们不快乐，这与系统背道而驰。如果我们保持旧的课堂学习制度，这个问题就不能被有效地解决。在一个总是因为不同的激情、不同的兴趣、不同的天赋、不同的学习速度而导致知识差异的群体中，优化学习是不可能的。唯一有效的优化解决方案是[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
+这是学校教育的最大弊病之一：学生们总是抱怨学校太无聊或太辛苦。学生们不快乐，这与系统背道而驰。如果我们保持旧的课堂学习制度，这个问题就不能被有效地解决。在一个总是因为不同的激情、不同的兴趣、不同的天赋、不同的学习速度而导致知识差异的群体中，优化学习是不可能的。唯一有效的优化解决方案是[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
 
 ## 5.4 老师的困境
 
 一个善意的老师在促进自主学习的同时，也可能抑制学习内驱力。
 
-如果一个孩子有一个问题“纽约在哪里?在哪个国家?”，父母或老师的自然本能是提供答案。如果孩子经常面对同样的问题，她将能够自己回忆起答案。否则，她将再次需要帮助。这种复习的整体效果类似于 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 中的复习，只不过它是自然产生的，没有与计算机交互的额外成本，而且它是随机产生的，没有优化每次复习的记忆效果。这种互动对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)既有抑制作用又有增强作用。随着事实逐渐被记住，人们对纽约作为美国一部分的兴趣也会逐渐减退，即不再是新鲜事。对美国相关事物的兴趣可能会随着对纽约兴趣的增加而增加。对纽约相关事物的兴趣可能会与对美国的兴趣成比例增加。
+如果一个孩子有一个问题「纽约在哪里？在哪个国家？」，父母或老师的自然本能是提供答案。如果孩子经常面对同样的问题，她将能够自己回忆起答案。否则，她将再次需要帮助。这种复习的整体效果类似于 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 中的复习，只不过它是自然产生的，没有与计算机交互的额外成本，而且它是随机产生的，没有优化每次复习的记忆效果。这种互动对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)既有抑制作用又有增强作用。随着事实逐渐被记住，人们对纽约作为美国一部分的兴趣也会逐渐减退，即不再是新鲜事。对美国相关事物的兴趣可能会随着对纽约兴趣的增加而增加。对纽约相关事物的兴趣可能会与对美国的兴趣成比例增加。
 
-当孩子**没有**从老师那里得到及时的反馈时，就会发生更有趣的互动。这个问题也许仍未得到解答，知识也不会增加。然而，所有没有得到即时回应的问题都有助于学习内驱力。纽约的位置仍然是个谜，每次遇到这个问题都会让它变得更加有趣。兴趣的增加将符合一个公式，这个公式类似于[长期记忆稳定性](https://supermemo.guru/wiki/Memory_stability)增长公式(正如[双组件记忆模型](https://supermemo.guru/wiki/Two_component_model_of_memory)所预测的那样)。兴趣稳定性的提高并不会对知识产生立竿见影的贡献，但会对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)产生强大的影响。孩子会在一个具有竞争性的过程中探索和发现，在这个过程中，所有的兴趣点都会吸引孩子的注意力，而孩子的注意力是依赖于背景的。例如，在生物学的背景下，纽约甚至可能不会在记忆中被点亮。然而，在查看地图或看地理纪录片的背景下，这个问题可能会再次出现，并推动进一步的探索。一旦孩子找到了那个强烈的问题的答案，即一个相对重要程度较高的问题在记忆中强烈持续过，学习的奖励就会被放大。学习的乐趣增加了。奖励在联想记忆中增殖，并增强了对了解纽约、了解美国以及了解与这两者有关的事物的积极联想。这是一个奖励增殖级联(多个对象之间的关联)，其深度取决于奖励的水平和原始的好奇心程度。这种级联包括记忆巩固。通过这种方式，通过不回答问题，老师可以潜在地增加记忆网络中更大区域的巩固。显然，这减少了在整个学习过程中复习知识的需要。
+当孩子**没有**从老师那里得到及时的反馈时，就会发生更有趣的互动。这个问题也许仍未得到解答，知识也不会增加。然而，所有没有得到即时回应的问题都有助于学习内驱力。纽约的位置仍然是个谜，每次遇到这个问题都会让它变得更加有趣。兴趣的增加将符合一个公式，这个公式类似于[长期记忆稳定性](https://supermemo.guru/wiki/Memory_stability)增长公式（正如[双组件记忆模型](https://supermemo.guru/wiki/Two_component_model_of_memory)所预测的那样）。兴趣稳定性的提高并不会对知识产生立竿见影的贡献，但会对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)产生强大的影响。孩子会在一个具有竞争性的过程中探索和发现，在这个过程中，所有的兴趣点都会吸引孩子的注意力，而孩子的注意力是依赖于背景的。例如，在生物学的背景下，纽约甚至可能不会在记忆中被点亮。然而，在查看地图或看地理纪录片的背景下，这个问题可能会再次出现，并推动进一步的探索。一旦孩子找到了那个强烈的问题的答案，即一个相对重要程度较高的问题在记忆中强烈持续过，学习的奖励就会被放大。学习的乐趣增加了。奖励在联想记忆中增殖，并增强了对了解纽约、了解美国以及了解与这两者有关的事物的积极联想。这是一个奖励增殖级联（多个对象之间的关联），其深度取决于奖励的水平和原始的好奇心程度。这种级联包括记忆巩固。通过这种方式，通过不回答问题，老师可以潜在地增加记忆网络中更大区域的巩固。显然，这减少了在整个学习过程中复习知识的需要。
 
 > 回答孩子们自己提出的问题的答案也会抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。相比较，不回答问题可能会促使年轻的大脑进行有益的探索，从而促进更长远的进步。
 
@@ -60,7 +60,7 @@
 
 综上所述，我们不能指望自主学习总是用有用的知识来充实我们的头脑。社交媒体因八卦和琐事而繁荣。青少年和成年人都可能在 Facebook 上消磨数不清的时间，却找不到有用的东西。我们似乎从来不会对社交互动感到厌烦，手机里不停地传来各种各样的闲聊声，满足了我们对新奇事物的渴望。
 
-对于许多有天赋的孩子来说，[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)是他们腾飞所需要的。对于所有寻求有价值知识的孩子来说，通用的方法是，**在任何校正系统的引导下[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。**这个校正者可以是父母、老师或同龄人(包括年长的同龄人)。学习轨迹校正器需要**在[最佳推动区](https://supermemo.guru/wiki/Push_zone)**，以确保正确的学习轨迹而又不会扰乱系统。当然，没有比成熟的自我意识更好的校正者，只有一点自律。受过教育的成年人应该理解终身学习的必要性，并理解学习进步的正确方向。理想情况下，生活本身是学习轨迹的最佳校正器。
+对于许多有天赋的孩子来说，[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)是他们腾飞所需要的。对于所有寻求有价值知识的孩子来说，通用的方法是，**在任何校正系统的引导下[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。**这个校正者可以是父母、老师或同龄人（包括年长的同龄人）。学习轨迹校正器需要**在[最佳推动区](https://supermemo.guru/wiki/Push_zone)**，以确保正确的学习轨迹而又不会扰乱系统。当然，没有比成熟的自我意识更好的校正者，只有一点自律。受过教育的成年人应该理解终身学习的必要性，并理解学习进步的正确方向。理想情况下，生活本身是学习轨迹的最佳校正器。
 
 ## 5.6 上学热情
 
@@ -78,7 +78,7 @@
 >
 > 我所知道的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)中最强大的人工催化剂是[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)。SuperMemo 中的间隔重复往往会一遍又一遍地提到相同的旧材料。学习中的[水蛭](http://help.supermemo.org/wiki/Glossary:Leech)会毒害复习的乐趣。[渐进学习](https://supermemo.guru/wiki/Incremental_learning)使得新材料的流入与旧材料的复习交织在一起成为可能。[知识树](http://help.supermemo.org/wiki/Glossary:Knowledge_tree)的不断巩固为“未完成”的叶子提供了持续的增长。这些充当了新鲜事物的吸引者。在传统学习中，遗忘往往会瓦解知识结构，导致“树的表面”的渐进停滞。在[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)中，这个表面不断增加，在新奇发现方面提供了越来越大的潜力。如果你对学习的热情在下降，考虑[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)。慢慢来！或者，励志读物也可以起到类似的作用。
 >
-> 如果你在学校遇到无聊或无法理解的话题，你可能需要忍受45分钟的无所作为。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你可以在几秒钟内转换科目，改变优先顺序，重新安排学习时间，或者在最佳时间窗内忍受过度复杂的痛苦，希望获得一些知识成果（参见：[推动区](https://supermemo.guru/wiki/Push_zone)）。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你可能会停留在舒适区，偶尔进入[推动区](https://supermemo.guru/wiki/Push_zone)，远离浪费时间的倒退区。今天看来太难的一个主题明天会变得容易。你永远不需要徒劳地忍受复杂。一旦你准备好了，你可以冒险进入同一个领域。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你使用你的学习内驱力作为强大的指导来优化你的选择。
+> 如果你在学校遇到无聊或无法理解的话题，你可能需要忍受 45 分钟的无所作为。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你可以在几秒钟内转换科目，改变优先顺序，重新安排学习时间，或者在最佳时间窗内忍受过度复杂的痛苦，希望获得一些知识成果（参见：[推动区](https://supermemo.guru/wiki/Push_zone)）。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你可能会停留在舒适区，偶尔进入[推动区](https://supermemo.guru/wiki/Push_zone)，远离浪费时间的倒退区。今天看来太难的一个主题明天会变得容易。你永远不需要徒劳地忍受复杂。一旦你准备好了，你可以冒险进入同一个领域。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你使用你的学习内驱力作为强大的指导来优化你的选择。
 >
 > > [渐进学习](https://supermemo.guru/wiki/Incremental_learning)是[学习内驱力](https://supermemo.guru/wiki/Learn_drive)最强大的催化剂
 
@@ -114,7 +114,7 @@
 >
 > 作为一名学生，我尝试了几十种编程语言。语言越有异国情调，就越有魅力。SuperMemo 是在 1987 年用 Pascal 开发的。从那以后，我固定在 Pascal 并停止了我的探究。**犬儒学派**的人会把这归因于衰老。我的解释不同。我使用最适合我的工具。我把我的探究时间留给了其他事情。我没有减少探究。我探究不同的方向。我在编程语言领域的学习内驱力已经得到了满足，但是我的整体学习内驱力仍然很饥渴。
 >
-> 像一个不成熟的学生一样，我也厌倦过间隔重复和记忆，说“在这个领域没有什么可学习或发现的”。我的同事，尤其是 Krzysztof Biedalak 和 Janusz Murakowski ，给了我一个小小的校正推送，说“[双变量记忆模型](http://www.super-memory.com/english/2vm.htm)可以使算法更简单，更容易实现、许可和推广”。当我开始探索这个干涸的领域，我就发现了无数我不知道的东西，并重新点燃了我对间隔重复的热情。讽刺的是，这个算法并没有变得那么简单，但事实是，熄灭的激情可以被重新点燃。
+> 像一个不成熟的学生一样，我也厌倦过间隔重复和记忆，说「在这个领域没有什么可学习或发现的」。我的同事，尤其是 Krzysztof Biedalak 和 Janusz Murakowski ，给了我一个小小的校正推送，说“[双变量记忆模型](http://www.super-memory.com/english/2vm.htm)可以使算法更简单，更容易实现、许可和推广”。当我开始探索这个干涸的领域，我就发现了无数我不知道的东西，并重新点燃了我对间隔重复的热情。讽刺的是，这个算法并没有变得那么简单，但事实是，熄灭的激情可以被重新点燃。
 
 ## 5.8 永恒的学习内驱力
 
