--- a/我再也不会把孩子送去学校/6.Learn drive and reward.md
+++ b/我再也不会把孩子送去学校/6.Learn drive and reward.md
@@ -22,13 +22,13 @@
 
 你们可能从物理课回忆起熵是无序的度量，热力学第二定律表明孤立系统的熵永远不会减小。这是一种形象的物理定律，我们会终生铭记。这是[普遍适用的](https://supermemo.guru/wiki/Applicability)。
 
-信息论中有一个姊妹概念叫[香农熵](https://en.wikipedia.org/wiki/Entropy_(information_theory))。它可以理解为由一个来源发送的信息的平均值。例如，假设一个频道连续不断地将一串相同的字母传送到无穷远处(例如，一串 A :「AAA……」)中。这是完全可以预测的，并且熵为零。我们不会从这样的渠道学习。
+信息论中有一个姊妹概念叫[香农熵](https://en.wikipedia.org/wiki/Entropy_(information_theory))。它可以理解为由一个来源发送的信息的平均值。例如，假设一个频道连续不断地将一串相同的字母传送到无穷远处（例如，一串 A :「AAA……」）中。这是完全可以预测的，并且熵为零。我们不会从这样的渠道学习。
 
 [Claude Shannon](https://en.wikipedia.org/wiki/Claude_Shannon) 在1948年提出了信息熵的概念。不久之后，科学家们开始假设信息渠道的熵是否会对大脑感知渠道价值的方式产生强大影响。1957年，[Meyer 假设](https://supermemo.guru/wiki/Music_and_entropy)音乐的熵决定了人们对音乐之美的感知。他的结论是，较高的熵可能会导致主观紧张，这与更有意思的音乐片段有关。
 
 Meyer 的思想[后来被改进](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)，以更好地理解对音乐和普通信息的感知。音乐不仅仅是信息。这通过一个现象来看是很显然的，因为一首歌被多次回放可以令人愉快好多次。但是书籍很少出现这种情况。
 
-音乐是一种普遍的信息。如果你被允许选择一个无线频道，你会很快从嘈杂的静电干扰中调谐出来，你也不会对零熵的静音太兴奋。但是，大多数人会对有规律的鼓声做出积极的反应。只要它没有被敲打在碎玻璃上(这是我们天生不喜欢的)，我们就会发现一个有固定鼓点的广播频道比无声的更有趣。这自然只会持续一段时间，直到鼓点本身变得无聊和太容易预测。
+音乐是一种普遍的信息。如果你被允许选择一个无线频道，你会很快从嘈杂的静电干扰中调谐出来，你也不会对零熵的静音太兴奋。但是，大多数人会对有规律的鼓声做出积极的反应。只要它没有被敲打在碎玻璃上（这是我们天生不喜欢的），我们就会发现一个有固定鼓点的广播频道比无声的更有趣。这自然只会持续一段时间，直到鼓点本身变得无聊和太容易预测。
 
 今天，我们终于可以测试大脑对信息熵的反应了。神经影像显示[前海马对视觉信息熵有反应](https://www.ncbi.nlm.nih.gov/pubmed/15896570)，[腹侧纹状体](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3403290/)也有类似的发现。因此，我们现在可以肯定大脑对信息熵有反应。熵感受器在扫描环境寻找学习机会时非常重要。这是奖励的前奏，而奖励是[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的基础。
 
@@ -52,7 +52,7 @@ Meyer 的思想[后来被改进](https://supermemo.guru/wiki/Impact_of_syncopati
 
 对于每一首音乐，都有一个可以接受的播放速度范围，在其范围内我们可以欣赏音乐之美。高速播放可能会很烦人，而且音乐可能变得难以解码，因为高速超出了我们的处理能力。同一首音乐如果放慢了速度，很快就会失去吸引力。演讲或课堂讲授也是如此。对于相同的信息和相同的熵水平，我们可以实现完全不同的信号吸引力水平。总是有一个最佳的传授速度，该速度取决于影响[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的所有其他因素，包括预备知识。因此，传授速度是高度个性化的。
 
-我喜欢以1.4倍的速度听讲座。我用1.3倍来听更有挑战性的片段。虽然我从来没有加快 [Fareed Zakaria](https://en.wikipedia.org/wiki/Fareed_Zakaria_GPS) 的速度，但是我享受这个节目中的每一条信息。课堂上的学生没有加速或减速按钮。即使是暂停按钮，如果有的话，也很难去点击，因为它可能会惹恼其他学生。
+我喜欢以 1.4 倍的速度听讲座。我用 1.3 倍来听更有挑战性的片段。虽然我从来没有加快 [Fareed Zakaria](https://en.wikipedia.org/wiki/Fareed_Zakaria_GPS) 的速度，但是我享受这个节目中的每一条信息。课堂上的学生没有加速或减速按钮。即使是暂停按钮，如果有的话，也很难去点击，因为它可能会惹恼其他学生。
 
 在学校里，传授的速度常常超过学生的处理能力。这导致了微不足道的学习和强大的压力。没有时间[欣赏高速列车窗外的风景](https://supermemo.guru/wiki/Futility_of_schooling)。在麻省理工学院，他们称之为「[*用消防水管喝水*](https://supermemo.guru/wiki/Futility_of_schooling)」。
 
@@ -60,11 +60,11 @@ Meyer 的思想[后来被改进](https://supermemo.guru/wiki/Impact_of_syncopati
 
 低概率事件携带更多信息。平均信息决定熵。预备知识决定了对信息通道的熵的感知。
 
-如果你碰巧收听了广播新闻，并且听到「珍妮特·杰克逊生了一个孩子」，你的兴趣程度将取决于事件发生的概率。如果你不知道珍妮特·杰克逊是谁，这是一个高概率事件。如果[每天约有35万名女性分娩](http://www.theworldcounts.com/stories/How-Many-Babies-Are-Born-Each-Day)，这已经不是新闻，也不是新鲜事或有趣的事。一名士兵在战争中的第一次死亡将成为新闻，但是当死亡人数增加到成千上万时，年轻的生命将只是一个统计数字。
+如果你碰巧收听了广播新闻，并且听到「*Janet Jackson 逊生了一个孩子*」，你的兴趣程度将取决于事件发生的概率。如果你不知道 Janet Jackson 是谁，这是一个高概率事件。如果[每天约有35万名女性分娩](http://www.theworldcounts.com/stories/How-Many-Babies-Are-Born-Each-Day)，这已经不是新闻，也不是新鲜事或有趣的事。一名士兵在战争中的第一次死亡将成为新闻，但是当死亡人数增加到成千上万时，年轻的生命将只是一个统计数字。
 
-如果你碰巧认识珍妮特·杰克逊或者喜欢她的音乐，那么生孩子的概率会急剧下降到「*一生一次*」的水平(对珍妮特来说)。这会让你变得有兴趣。然而，如果你记得珍妮特是古代情景喜剧中的一个漂亮女孩，她生孩子可能会被归为「*不可能！*」。如果你意识到珍妮特 50 岁了，并且你知道更年期，你可能会立刻对她的情况产生病态的好奇。你预备知识决定了你对信息的反应。信道没有最佳熵水平，只有最适合特定大脑的熵水平。在这一点上，你可能会看到，我们需要引入一个新的衍生概念，我们在[之后](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy)将称之为**学习熵**。学习熵将决定一个特定的通道对一个特定的大脑的吸引力。
+如果你碰巧认识 Janet Jackson 或者喜欢她的音乐，那么生孩子的概率会急剧下降到「*一生一次*」的水平（对 Janet 来说）。这会让你变得有兴趣。然而，如果你记得 Janet 是古代情景喜剧中的一个漂亮女孩，她生孩子可能会被归为「*不可能！*」。如果你意识到 Janet 50 岁了，并且你知道更年期，你可能会立刻对她的情况产生病态的好奇。你预备知识决定了你对信息的反应。信道没有最佳熵水平，只有最适合特定大脑的熵水平。在这一点上，你可能会看到，我们需要引入一个新的衍生概念，我们在[之后](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy)将称之为**学习熵**。学习熵将决定一个特定的通道对一个特定的大脑的吸引力。
 
-如果你喜欢珍妮特式的八卦，那么这个八卦频道会给你带来恰到好处的意外。它将提供学习匹配。如果你缺乏相关知识或者你的优先级不同，你就会对它置之不理。你的学习重点也将决定你在特定领域的知识水平，以及你对任何特定渠道及其信息熵的反应。
+如果你喜欢 Janet 式的八卦，那么这个八卦频道会给你带来恰到好处的意外。它将提供学习匹配。如果你缺乏相关知识或者你的优先级不同，你就会对它置之不理。你的学习重点也将决定你在特定领域的知识水平，以及你对任何特定渠道及其信息熵的反应。
 
 ## 6.7 可预见性和意外
 
@@ -88,9 +88,9 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 扫描环境中的信息如同扫描食物的气味。气味很诱人，但只有实际去吃才是真正的回报。这就是熵扫描不需要回报的原因。它所需要做的就是获得奖励。如前所述，前海马对熵有反应，然而实验设计确保熵是指输入过程中不会丢失太多信息的简单形状的组合。与其说是信号熵，不如说是信息比较器(如海马)的输入熵。重要的不是视网膜像素，而是比较器输入上表示的手掌形状。对于比较器来说，灰度或静态噪声的高熵模式与白度或静音没有区别。它们在输入时都会带来相同的熵:零。这就是为什么我用「[学习」这个词来准确地描述信息渠道的吸引力。
 
-响应信号熵的前海马体因发现 Halle Berry 神经元而闻名（见[更多](http://phys.org/news/2005-06-single-cell-recognition-halle-berry-neuron.html)）。研究人员将电极植入一名同意接受治疗的癫痫患者体内，发现在不同情境下，单个神经元对 Halle Berry 图像的反应是一致的。同样的神经元也会对  Halle Berry 的名字做出反应。与此同时，后海马体对 Jennifer Aniston 的反应可能不那么一致(这可能是前一层神经处理的迹象)。
+响应信号熵的前海马体因发现 Halle Berry 神经元而闻名（参见[更多](http://phys.org/news/2005-06-single-cell-recognition-halle-berry-neuron.html)）。研究人员将电极植入一名同意接受治疗的癫痫患者体内，发现在不同情境下，单个神经元对 Halle Berry 图像的反应是一致的。同样的神经元也会对  Halle Berry 的名字做出反应。与此同时，后海马体对 Jennifer Aniston 的反应可能不那么一致（这可能是前一层神经处理的迹象）。
 
-我们大多数人都不知道 Halle Berry 的气味如何，她的气味可能不足以激活海马体中的 Halle Berry 神经元，然而，即使是气味信号也可以通过嗅球、嗅结节、松果体皮层和内嗅皮层中的几个突触快速到达那里(见图)。然而，如果一个人能听到 Halle 的声音，声音信号可能会在嗅结节中出现，加强识别，并导致海马或更下方的新皮层中 Halle 神经元的激活。
+我们大多数人都不知道 Halle Berry 的气味如何，她的气味可能不足以激活海马体中的 Halle Berry 神经元，然而，即使是气味信号也可以通过嗅球、嗅结节、松果体皮层和内嗅皮层中的几个突触快速到达那里（见下图）。然而，如果一个人能听到 Halle 的声音，声音信号可能会在嗅结节中出现，加强识别，并导致海马或更下方的新皮层中 Halle 神经元的激活。
 
 [![Olfactory system anatomy](https://supermemo.guru/images/thumb/0/04/Olfactory_system_anatomy.jpg/692px-Olfactory_system_anatomy.jpg)](https://supermemo.guru/wiki/File:Olfactory_system_anatomy.jpg)
 
@@ -113,17 +113,17 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 ## 6.9 「哇！」因子
 
-1977年夏天，在寻找外星智能的时候，SETI 的研究人员发现了一个来自[射手座](https://en.wikipedia.org/wiki/Sagittarius_(constellation))的不寻常的无线电信号。在宇宙空间微弱的低水平噪声中，信号是极不可能出现的。低概率标志着高意外。天文学家杰里·厄尔曼在打印输出上圈出6个与信号相对应的字母，并在旁边写上了「Wow!」(哇！)。
+1977年夏天，在寻找外星智能的时候，SETI 的研究人员发现了一个来自[射手座](https://en.wikipedia.org/wiki/Sagittarius_(constellation))的不寻常的无线电信号。在宇宙空间微弱的低水平噪声中，信号是极不可能出现的。低概率标志着高意外。天文学家 Jerry Ehman 在打印输出上圈出6个与信号相对应的字母，并在旁边写上了「Wow!」（哇！）。
 
 [![A scan of a color copy of the original computer printout, taken several years after the 1977 arrival of the Wow! signal](https://supermemo.guru/images/thumb/d/d3/Wow_signal.jpg/500px-Wow_signal.jpg)](https://supermemo.guru/wiki/File:Wow_signal.jpg)
 
 > **图**:*一张彩色电脑打印出来的原始拷贝扫描件，拍摄于1977年[哇!信号](https://en.wikipedia.org/wiki/Wow!_signal)。（来源：维基百科）*
 
-「Wow!」 是大脑对突然发现的反应。这一刻非常愉快。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的全部目的是在环境中寻找「Wow!」因子。这些是最有价值的知识，补充了目前已知的:当前的现实模型。[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)的乐趣来自流入学生大脑的涌动的「wows」的力量。
+「Wow!」 是大脑对突然发现的反应。这一刻非常愉快。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的全部目的是在环境中寻找「Wow!」因子。这些是最有价值的知识，补充了目前已知的：当前的现实模型。[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)的乐趣来自流入学生大脑的涌动的「wows」的力量。
 
-到目前为止，我们已经看到熵、意外、可预测性和预备知识对学习的影响。在这种情况下，只有信号的概率并不能完全解释它的力量。它的解释在本文的后面（参见：[知识评估网络]()）。厄尔曼在写这篇文章的时候，能够感觉到它所蕴含的巨大意义。这是迄今为止，也是从那时起，证明除了人类文明以外，还有其他文明存在的最有力的证据。如果相同的信号出现在检测海洋中的沙丁鱼，就不会有「Wow!"」。即使在北极也不会有。
+到目前为止，我们已经看到熵、意外、可预测性和预备知识对学习的影响。在这种情况下，只有信号的概率并不能完全解释它的力量。它的解释在本文的后面（参见：[知识评估网络](https://supermemo.guru/wiki/Knowledge_valuation_network)）。Ehman 在写这篇文章的时候，能够感觉到它所蕴含的巨大意义。这是迄今为止，也是从那时起，证明除了人类文明以外，还有其他文明存在的最有力的证据。如果相同的信号出现在检测海洋中的沙丁鱼，就不会有「Wow!」。即使在北极也不会有。
 
-信息渠道的可靠性很重要。如果错误率高，[学习内驱力](https://supermemo.guru/wiki/Learn_drive)可能会减弱。当彭齐亚斯和威尔逊在1964年发现宇宙微波背景辐射时，并没有「Wow!"」。困惑的研究人员继续从他们的无线电天线上移除鸽子粪便。解释神秘噪音时，他们优先考虑了鸽子粪的原因。1978年，彭齐亚斯和威尔逊因为他们的发现获得了诺贝尔奖。
+信息渠道的可靠性很重要。如果错误率高，[学习内驱力](https://supermemo.guru/wiki/Learn_drive)可能会减弱。当 Penzias 和 Wilson 在 1964 年发现宇宙微波背景辐射时，并没有「Wow!」。困惑的研究人员继续从他们的无线电天线上移除鸽子粪便。解释神秘噪音时，他们优先考虑了鸽子粪的原因。1978 年，Penzias 和 Wilson 因为他们的发现获得了诺贝尔奖。
 
 当一个科学家有了一个发现，他可能会惊呼「尤里卡！」和手舞足蹈。他大脑中某个地方的神经网络产生了一种[概括](https://supermemo.guru/wiki/Generalization)，结果发出了奖励信号。这进一步传播，让一个老人像孩子一样在实验室里跳跃。
 
@@ -139,17 +139,17 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 大脑处理过的所有知识片段都会立即评估其相关性、[连贯性](https://supermemo.guru/wiki/Coherence)和价值。我们能立即知道这些信息是否可以理解的和有用的。当它们[前后矛盾](https://supermemo.guru/wiki/Consistency)、[不连贯](https://supermemo.guru/wiki/Coherence)或不相关时，我们也常常会立即注意到。
 
-不寻常和令人惊讶的知识非常有价值，然而，从大脑的角度来看，概率并非价值的最佳反映。有极不可能发生的低重要性事件(例如，小行星撞击遥远的行星系统)，也有很可能的发生改变一个人生活的事件（例如，「*你愿意嫁给我吗*？」）。
+不寻常和令人惊讶的知识非常有价值，然而，从大脑的角度来看，概率并非价值的最佳反映。有极不可能发生的低重要性事件（例如，小行星撞击遥远的行星系统），也有很可能的发生改变一个人生活的事件（例如，「*你愿意嫁给我吗*？」）。
 
 ### 6.10.2 感性脑和理性脑
 
-**知识评估网络**是一个基于感性评估和理性评估相结合的评估系统。感性评估将把信息与原始大脑中枢负责饥饿、口渴、性冲动等的奖励联系起来。理性估值将以知识为基础。纯粹感性评估的一个例子是对「*最近的快餐店在哪里？*」的回答。基于知识的评估可能更加复杂和高度网络化，也就是说，依赖于一个次级评估网络。对「*哪本书最适合我的考试？*」的回答通过一个人的目标来评估，包括通过考试，获得影响工作前景的学位，并为终生目标做出贡献。感性和理性的评估在解剖学上是分开的。感性评估来自于被比喻为三位一体大脑中更古老的部分:爬行动物和古哺乳动物结构。例如，丘脑处理的特定刺激可能会向杏仁体发送单独的信号进行感性评估，向新皮层发送单独的信号进行理性评估。感性化的大脑在基因上更古老。个性和教育决定了理性评估是否能控制或超越感性评估。
+**知识评估网络**是一个基于感性评估和理性评估相结合的评估系统。感性评估将把信息与原始大脑中枢负责饥饿、口渴、性冲动等的奖励联系起来。理性估值将以知识为基础。纯粹感性评估的一个例子是对「*最近的快餐店在哪里？*」的回答。基于知识的评估可能更加复杂和高度网络化，也就是说，依赖于一个次级评估网络。对「*哪本书最适合我的考试？*」的回答通过一个人的目标来评估，包括通过考试，获得影响工作前景的学位，并为终生目标做出贡献。感性和理性的评估在解剖学上是分开的。感性评估来自于被比喻为三位一体大脑中更古老的部分：爬行动物和古哺乳动物结构。例如，丘脑处理的特定刺激可能会向杏仁体发送单独的信号进行感性评估，向新皮层发送单独的信号进行理性评估。感性化的大脑在基因上更古老。个性和教育决定了理性评估是否能控制或超越感性评估。
 
 ### 6.10.3 快速思考中的决策树
 
-**知识评估网络**是决定单个知识块价值的记忆关系网络。如果将学习j解释为一项任务，评估网络将决定**感知到的任务价值**。
+**知识评估网络**是决定单个知识块价值的记忆关系网络。如果将学习解释为一项任务，评估网络将决定**感知到的任务价值**。
 
-在计算方面，知识评估网络比作[决策树](https://en.wikipedia.org/wiki/Decision_tree)。目标和情感决定了树根的核心价值。知识片段之间的语义联系可以被解释为从目标到细节的部分价值转移。精心整合和精心选择的知识的组织良好的语义网络需要几毫秒才能做出专家决策。这就是卡尼曼所说的自动[快速思考](https://supermemo.guru/wiki/Fast_thinking)(如果你对需要缓慢解决问题的棘手问题感兴趣，请参见[如何解决任何问题？](https://supermemo.guru/wiki/How_to_solve_any_problem%3F))中。同样的过程，作为决策或解决问题的基础，参与知识评估。像许多专家的决定一样，评估速度很快，而且通常是在意识参与度很低的情况下进行的。简而言之，我们有时很快知道一些事情，却无法完全解释原因。这个过程几乎不受我们自己的控制，更不用说学校老师的控制了。为了有效学习，估值必须很高。
+在计算方面，知识评估网络比作[决策树](https://en.wikipedia.org/wiki/Decision_tree)。目标和情感决定了树根的核心价值。知识片段之间的语义联系可以被解释为从目标到细节的部分价值转移。精心整合和精心选择的知识的组织良好的语义网络需要几毫秒才能做出专家决策。这就是卡尼曼所说的自动[快速思考](https://supermemo.guru/wiki/Fast_thinking)（如果你对需要缓慢解决问题的棘手问题感兴趣，请参见[如何解决任何问题？](https://supermemo.guru/wiki/How_to_solve_any_problem%3F)）中。同样的过程，作为决策或解决问题的基础，参与知识评估。像许多专家的决定一样，评估速度很快，而且通常是在意识参与度很低的情况下进行的。简而言之，我们有时很快知道一些事情，却无法完全解释原因。这个过程几乎不受我们自己的控制，更不用说学校老师的控制了。为了有效学习，估值必须很高。
 
 [![xefer is a tool that helps understand knowledge as a network. It relies on semantic links between Wikipedia articles](https://supermemo.guru/images/thumb/9/97/Exemplary_xefer_output.jpg/675px-Exemplary_xefer_output.jpg)](https://supermemo.guru/wiki/File:Exemplary_xefer_output.jpg)
 
@@ -169,7 +169,7 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 教育系统的主要问题是一种千篇一律的方法，在这种方法中，所有的孩子都以流水线的方式接受相同的知识，而很少考虑有效学习的关键组成部分：[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。学习内驱力是一种完美的计算系统，它能将「大脑中代表知识的语义网络的当前状态」与「知识评估网络响应环境中可用信息而产生的当前输入」相匹配。如果这个孩子坚持要看 YouTube 上的视频，那么他自己的大脑就是最好的权威。所有干涉都会影响未来的独立性和创造性。
 
-虽然讲课老师可能会花 45 分钟给孩子灌输一长串符号，这些符号会产生低估值和可忽略不计的记忆，但是同一个孩子可以在3 - 5分钟内访问谷歌，识别出具有高价值的信息，并且容易编码终身保留。对于在这一过程中受过良好训练的孩子来说，在自学过程中获得知识的效率可能会提高一个数量级。当我说「数量级」时，我只是谦虚和保守。我不想遭到夸张的指责。我在本文其他地方列举了几个具体比较的例子(例如，[一个月内学习学校13年所教的知识](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!#Inefficiency_of_schooling)，或者[在假期学习速度加快1600 %](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Self-directed_acceleration) )。
+虽然讲课老师可能会花 45 分钟给孩子灌输一长串符号，这些符号会产生低估值和可忽略不计的记忆，但是同一个孩子可以在 3 - 5 分钟内访问谷歌，识别出具有高价值的信息，并且容易编码终身保留。对于在这一过程中受过良好训练的孩子来说，在自学过程中获得知识的效率可能会提高一个数量级。当我说「数量级」时，我只是谦虚和保守。我不想遭到夸张的指责。我在本文其他地方列举了几个具体比较的例子（例如[一个月内学习学校13年所教的知识](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!#Inefficiency_of_schooling)，或者[在假期学习速度加快1600 %](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Self-directed_acceleration) ）。
 
 在我谈到知识的金块时，Peter Thiel 谈到了[幂律](https://supermemo.guru/wiki/Thiel_on_power_law)：经过磨练的一小部分核心技能可以带来指数级回报。
 
@@ -183,7 +183,7 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 >
 > 我有我自己鲜明的例子来说明评估网络在对抗教育系统方面的力量：
 >
-> 1985年，我算出了发展长期记忆所需的知识复习最佳间隔的近似函数。这是就是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的诞生。最初，这个函数是用[笔和纸](http://www.super-memory.com/articles/paper.htm)来实现的。几个月后，我意识到这个系统非常强大。我知道我可以用电脑把它的力量翻倍。然而，我不知道有谁能根据我的函数来编写学习软件。那时候，波兰的所有程序员是要么是在大型机上写 Fortran 或 Cobol 的老家伙，要么是在使用 ZX 81、Commodore 64 或 ZX Spectrum 等微型计算机的越来越多的业余爱好者。我决定自己写这个程序。但是我没有编程技能。我是计算机科学的学生，我向老师寻求帮助。然而，我们唯一的编程课程是 Datapoint 汇编语言。这些技能对于玩玩寄存器得出 11 * 11 = 121非常有用。但我想学习一些对 SuperMemo 编程有用的东西。我的学校一直要求我学习计算电路的电阻，或者学习符号积分。我的知识评估网络产生了一个简单的输出:编程技能——&gt; SuperMemo ——&gt;更快的学习(在所有领域，包括电子或微积分)。我决心学习编程。我的学校决心阻止我(通过要求选修其他必修课程)。无奈之下，我报名了经济大学，该大学开设了算法语言课程。这门课程的重点是 [Pascal](https://en.wikipedia.org/wiki/Pascal_(programming_language))。我不得不在做平时的功课的同时，在额外的时间里学习 Pascal。那门课程不错，但我们都在学习理论。纸上谈兵。当时( 1986年)波兰大学里的个人电脑很少，大多数实用的应用都在名为 [Odra](https://en.wikipedia.org/wiki/Odra_(computer)) 的大型机上运行(从 1960 年开始，为在波兰的苏联集团生产)。当我终于得到了我的第一台电脑：[ZX Spectrum](https://en.wikipedia.org/wiki/ZX_Spectrum) ( 1986年1月4日)，我终于可以开始学习编程语言了。在电脑到来之前，我开始写我的第一个程序！在纸上。这是一个组织我一天的计划(类似 [SuperMemo](http://help.supermemo.org/wiki/Plan) 中的计划)。不久之后，我也学会了 Pascal。首先，我必须减少学校的不良影响，减轻课业负担。我和我的电路老师达成了协议。我会为他做一些高通滤波计算，这将是提高我 Pascal 技能的机会。这个程序花了很多小时来写，简直是浪费时间。这是糟糕学习的完美例子。我几乎不明白我自己的程序是如何工作的。然而，这仍然比仅仅学习图解要好。就编程而言，那段学习很好，我的技能提高了很多。
+> 1985年，我算出了发展长期记忆所需的知识复习最佳间隔的近似函数。这是就是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的诞生。最初，这个函数是用[笔和纸](http://www.super-memory.com/articles/paper.htm)来实现的。几个月后，我意识到这个系统非常强大。我知道我可以用电脑把它的力量翻倍。然而，我不知道有谁能根据我的函数来编写学习软件。那时候，波兰的所有程序员是要么是在大型机上写 Fortran 或 Cobol 的老家伙，要么是在使用 ZX 81、Commodore 64 或 ZX Spectrum 等微型计算机的越来越多的业余爱好者。我决定自己写这个程序。但是我没有编程技能。我是计算机科学的学生，我向老师寻求帮助。然而，我们唯一的编程课程是 Datapoint 汇编语言。这些技能对于玩玩寄存器得出 11 * 11 = 121非常有用。但我想学习一些对 SuperMemo 编程有用的东西。我的学校一直要求我学习计算电路的电阻，或者学习符号积分。我的知识评估网络产生了一个简单的输出：编程技能——&gt; SuperMemo ——&gt;更快的学习(在所有领域，包括电子或微积分)。我决心学习编程。我的学校决心阻止我(通过要求选修其他必修课程)。无奈之下，我报名了经济大学，该大学开设了算法语言课程。这门课程的重点是 [Pascal](https://en.wikipedia.org/wiki/Pascal_(programming_language))。我不得不在做平时的功课的同时，在额外的时间里学习 Pascal。那门课程不错，但我们都在学习理论。纸上谈兵。当时（1986 年）波兰大学里的个人电脑很少，大多数实用的应用都在名为 [Odra](https://en.wikipedia.org/wiki/Odra_(computer)) 的大型机上运行（从 1960 年开始，为在波兰的苏联集团生产）。当我终于得到了我的第一台电脑：[ZX Spectrum](https://en.wikipedia.org/wiki/ZX_Spectrum)（1986 年 1 月 4 日），我终于可以开始学习编程语言了。在电脑到来之前，我开始写我的第一个程序！在纸上。这是一个组织我一天的计划（类似 [SuperMemo](http://help.supermemo.org/wiki/Plan) 中的计划）。不久之后，我也学会了 Pascal。首先，我必须减少学校的不良影响，减轻课业负担。我和我的电路老师达成了协议。我会为他做一些高通滤波计算，这将是提高我 Pascal 技能的机会。这个程序花了很多小时来写，简直是浪费时间。这是糟糕学习的完美例子。我几乎不明白我自己的程序是如何工作的。然而，这仍然比仅仅学习图解要好。就编程而言，那段学习很好，我的技能提高了很多。
 >
 > 对那些不懂编程的人来说，很难用语言表达出来，但是大学课程和自己编程之间的知识价值差异相当于李子和木星之间的大小差异。当我的同学们在电子学和计量学方面苦于无聊的讲座时，我已经可创业了。我在学校什么也学不到。我可以在 Pascal 的课外课程中学到一点。然而，只有激情和明确目标支持的实用知识才是重要的。到了 1987 年 12 月，我的努力达到了顶峰，写下了第一版 SuperMemo，这彻底改变了我的人生历程。我的导师 Zbigniew Kierzowski 博士的开明态度让我把我的硕士论文全部奉献给 SuperMemo 这个主题。80 岁生日快乐，Kierzkowski 教授 ！对于一个学生来说，在这个尺度上做出自己的决定，然后再加上论文是用英语写的，这是非常不寻常的。这一事实在今天并不罕见，但它涉及到1989年的一场大规模行政和战术斗争。
 >
@@ -209,7 +209,7 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 讲座可能很无聊也可能很吸引人。学习熵从个人的角度来表示它们的吸引力。
 
-虽然熵有一个精确的数学定义，但是学习熵最好用「奖励系统」对从「分析的信号」中学习的行动的反应来衡量。正如熵取决于单个信息的概率一样，学习熵也取决于这些信息(图片、声音、句子等)的奖励效应。这种奖励效应将与概率相关联，但评估将在很大程度上取决于[知识评估网络](https://supermemo.guru/wiki/Knowledge_valuation_network)。
+虽然熵有一个精确的数学定义，但是学习熵最好用「奖励系统」对从「分析的信号」中学习的行动的反应来衡量。正如熵取决于单个信息的概率一样，学习熵也取决于这些信息（图片、声音、句子等）的奖励效应。这种奖励效应将与概率相关联，但评估将在很大程度上取决[知识评估网络](https://supermemo.guru/wiki/Knowledge_valuation_network)。
 
 好的学习是有奖励的。然而，也有不好的学习。因为这里有解码失败惩罚。如果一名学生努力解码一条信息，但失败了，他将受到惩罚。挫折就是这样产生的。这就是不喜欢学习的开始。如果学习熵低，奖励少，惩罚高，最终结果可能是负面的。如果我们把负面的奖励信号考虑在内，学习熵实际上可以为负值。无聊的讲座可能会带来负值的学习熵。这会导致抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。
 
@@ -233,13 +233,13 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 在一个类似[遗忘](https://supermemo.guru/wiki/Forgetting_curve)的过程中，[学习熵](https://supermemo.guru/wiki/Forgetting_curve)的奖励的影响将随着时间的推移呈指数级下降。就像[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)复习一样，新的奖励将学习熵恢复到更高的水平。就像[间隔效应](https://supermemo.guru/wiki/Spacing_effect)一样，较长的休息时间可能会导致相同的信息有更多的奖励。
 
-在学习过程中，决定学习熵的奖励信号和决定回忆的巩固信号有很大的区别：一旦你学会了什么，在短时间内重复复习是没有意义的，一旦你把回忆的概率提高到100%，你可以在下次复习之前让时间流逝。学习熵的上限可能很难达到。如果你喜欢一场演讲，有一些歪曲的事实或讲授，你会更喜欢它。如果你只记住一段记忆，你不可能在短时间内用技巧更好地记住它。你可以使用助记技巧重新构建记忆并影响其持久性，但是一旦回忆概率达到100%，记忆的最好的办法是让它闲置一段时间或在不同的上下文中使用它，这可能会导致开发新的记忆，从而与原来的一段记忆形成冗余连接。
+在学习过程中，决定学习熵的奖励信号和决定回忆的巩固信号有很大的区别：一旦你学会了什么，在短时间内重复复习是没有意义的，一旦你把回忆的概率提高到 100%，你可以在下次复习之前让时间流逝。学习熵的上限可能很难达到。如果你喜欢一场演讲，有一些歪曲的事实或讲授，你会更喜欢它。如果你只记住一段记忆，你不可能在短时间内用技巧更好地记住它。你可以使用助记技巧重新构建记忆并影响其持久性，但是一旦回忆概率达到100%，记忆的最好的办法是让它闲置一段时间或在不同的上下文中使用它，这可能会导致开发新的记忆，从而与原来的一段记忆形成冗余连接。
 
 学习熵的消失是由于缺乏奖励信号。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的消失是一个[遗忘](https://supermemo.guru/wiki/Forgetting)的问题（包括因部分脑细胞死亡而遗忘）。
 
 学习熵将以指数下降和收益递减的方式叠加在每个信息上。通过优化奖励信息的出现时机，我们可以将学习熵提高，使学习成为与食物、性、药物等奖励相同的最令人愉快的活动之一。如果你对此持怀疑态度，请回忆一下那些沉迷于电子游戏的玩家，他们可以在晚上饿着肚子玩游戏。[电子游戏](https://supermemo.guru/wiki/Videogames)可以劫持[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，并将其与赌博的奖励结合起来。赌博的奖励也可能受类似于学习熵的下降和提升规则的支配，然而，它们受制于[可变的奖励](https://supermemo.guru/wiki/Variable_reward)，这可能导致上瘾。重要的是要区分学习的乐趣和有害的上瘾（参见：[对学习的上瘾](https://supermemo.guru/wiki/Addiction_to_learning)）。
 
-学习熵将决定[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，但两者将以不同的规则来维持。学习内驱力依赖于知识，因此将受到[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的影响。由于知识是一个网络，所以说学习内驱力的最佳激励可能是没有意义的。为了最大限度地提高学习内驱力，我们应该终身学习，尊重[自然创造力周期](https://supermemo.guru/wiki/Natural_creativity_cycle)，并注意大脑的健康(即一般的健康)。
+学习熵将决定[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，但两者将以不同的规则来维持。学习内驱力依赖于知识，因此将受到[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的影响。由于知识是一个网络，所以说学习内驱力的最佳激励可能是没有意义的。为了最大限度地提高学习内驱力，我们应该终身学习，尊重[自然创造力周期](https://supermemo.guru/wiki/Natural_creativity_cycle)，并注意大脑的健康（即一般的健康）。
 
 ## 6.14 最佳信息传授
 
@@ -247,9 +247,9 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 如果最佳学习熵水平取决于学生，老师该如何最好地向全班学生传授知识？有时候适合所有人的传授是不可能的。换句话说，这困难到需要天才的教学技能。对大多数老师来说，他们的传授使大多数孩子感到无聊或沮丧。
 
-在课堂上，少数幸运儿可能会理解大部分信息。对于一小部分有天赋的人来说，这堂课可能没有带来多少新知识。对他们来说这很无聊。对于其他孩子来说，信息的复杂性超出了他们的理解水平。在这种情况下，如果他们试图理解，老师的讲课可能会令他们挫败。一个关于弦理论的讲课可能相当于一个随机打乱排列的英语单词序列的噪音。讲课是一种浪费时间的活动。诺贝尔奖得主[ Carl Wieman ](https://supermemo.guru/wiki/Carl_Wieman)把它比作[放血](https://supermemo.guru/wiki/Wieman:_Lectures_make_no_sense)。
+在课堂上，少数幸运儿可能会理解大部分信息。对于一小部分有天赋的人来说，这堂课可能没有带来多少新知识。对他们来说这很无聊。对于其他孩子来说，信息的复杂性超出了他们的理解水平。在这种情况下，如果他们试图理解，老师的讲课可能会令他们挫败。一个关于弦理论的讲课可能相当于一个随机打乱排列的英语单词序列的噪音。讲课是一种浪费时间的活动。诺贝尔奖得主 [Carl Wieman](https://supermemo.guru/wiki/Carl_Wieman) 把它比作[放血](https://supermemo.guru/wiki/Wieman:_Lectures_make_no_sense)。
 
-为了避免负学习熵带来的挫败感，学生们会像你从我[前面](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking)提到的泰国频道换台一样「换台」。孩子们会忽略来自老师的「静电噪音」，并收听到其他「频道」，这些频道有更合适的学习熵水平（例如桌下的手机上的Facebook）。即使他们的理解能力很好，所传授的知识也可能无法与他们目前的知识互补。如果这些知识不能产生[高质量高价值](https://supermemo.guru/wiki/Knowledge_valuation_network)的概括，就会被认为是显而易见或毫无关联的。
+为了避免负学习熵带来的挫败感，学生们会像你从我[前面](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking)提到的泰国频道换台一样「换台」。孩子们会忽略来自老师的「静电噪音」，并收听到其他「频道」，这些频道有更合适的学习熵水平（例如桌下的手机上的 Facebook）。即使他们的理解能力很好，所传授的知识也可能无法与他们目前的知识互补。如果这些知识不能产生[高质量高价值](https://supermemo.guru/wiki/Knowledge_valuation_network)的概括，就会被认为是显而易见或毫无关联的。
 
 低学习熵，即使偶尔发生，也会让学生习惯性「换台」。一段时间后，学生们将「进化」一种过滤器，将教师当做一个零熵和零学习熵的无声广播频道。提高讲课质量将是徒劳的。老师在学生心中消失了！
 
@@ -271,13 +271,13 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 我感到惊讶的是，有这么多的资源浪费在寻找让孩子们在讲课期间保持兴趣的方法的研究上，而讲课显然只是一种糟糕的教育工具。眼神交流分析？参与分析？努力量化激情？所有的孩子都有了天生的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，我们的首要任务应该是确保我们不会破坏这种内驱力。对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)起主要破坏作用的是[强制灌输知识](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive)。此外，还有许多社会经济因素使许多儿童即使在最好的环境下也不能茁壮成长。有些孩子永远不会表现出对学习的热情。在大多数情况下，这不是他们的错。只有一小部分孩子受到残疾、健康问题和不幸的遗传天赋的限制。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)随年龄增长呈指数衰减的主要原因是义务教育。被动的授课助长了这一过程。
 
-当然，有些授课是有效的。[可汗学院](https://supermemo.guru/wiki/Khan_Academy)里有很多很好的例子。即使是没有幻灯片的口头演讲也能起作用。YouTube上的TED演讲可能会很有趣。它能满足[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。[MOOC](https://en.wikipedia.org/wiki/Massive_open_online_course) 是建立在这样一个原则之上的，即一位摇滚明星教师比数千名重复同样咒语的普通教师要好。即使你只是一个被动的倾听者，你也能学到很多东西。但是，也有一些条件：你需要对主题充满好奇，或者你需要喜欢这个演讲者，或者两者兼而有之。**只有一个确定的机制可以确保讲座是有趣的：你需要自己选择它！**这只是自我导向学习要求的又一个方面。
+当然，有些授课是有效的。[可汗学院](https://supermemo.guru/wiki/Khan_Academy)里有很多很好的例子。即使是没有幻灯片的口头演讲也能起作用。YouTube 上的 TED 演讲可能会很有趣。它能满足[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。[MOOC](https://en.wikipedia.org/wiki/Massive_open_online_course) 是建立在这样一个原则之上的，即一位摇滚明星教师比数千名重复同样咒语的普通教师要好。即使你只是一个被动的倾听者，你也能学到很多东西。但是，也有一些条件：你需要对主题充满好奇，或者你需要喜欢这个演讲者，或者两者兼而有之。**只有一个确定的机制可以确保讲座是有趣的：你需要自己选择它！**这只是自我导向学习要求的又一个方面。
 
 除了选择之外，在讲课时，你绝对需要一个暂停按钮，以防你需要上厕所，或缓解饥饿感。没有什么比爆裂的膀胱更能有效地毁掉一场讲课了。最后但并非最不重要的一点是，大多数讲课都可以受益于 Netflix 的「跳过开头」（SkipIntro）功能。
 
 当然，如果你用你自己的创造性思维，甚至是快速的研究来提高讲课的效率，讲课就会发挥最好的作用。这就是为什么暂停一分钟或一天可能是学习效率的关键。与一些精神科医生的说法相反，创造性休息和走神与[多动症](https://supermemo.guru/wiki/ADHD)无关。只要它们是毫不相关的，它们就是高效学习的标志。
 
-我使用两种方法来渐进地学习讲课。我的第一个方法是倾听和锻炼。锻炼可以提高注意力。良好的专注减少了暂停的需要，然而，它也减少了学习的创造性方面。对于优先级最高的主题，我使用[渐进视频](https://supermemo.guru/wiki/Incremental_video)，我可以在其中暂停和继续多次。我甚至可以把最重要的讲课节选留待将来复习。然而，即使是渐进视频也不是最好的学习方法。它不能在速度和数量上与[渐进阅读]()相竞争。有时，使用渐进阅读处理讲课记录比听讲课本身更有意义。这一点在充满陈述性知识的讲课中尤为明显。
+我使用两种方法来渐进地学习讲课。我的第一个方法是倾听和锻炼。锻炼可以提高注意力。良好的专注减少了暂停的需要，然而，它也减少了学习的创造性方面。对于优先级最高的主题，我使用[渐进视频](https://supermemo.guru/wiki/Incremental_video)，我可以在其中暂停和继续多次。我甚至可以把最重要的讲课节选留待将来复习。然而，即使是渐进视频也不是最好的学习方法。它不能在速度和数量上与[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)相竞争。有时，使用渐进阅读处理讲课记录比听讲课本身更有意义。这一点在充满陈述性知识的讲课中尤为明显。
 
 我主要根据我喜欢听的演讲者来选择我的视频材料。在这篇文章的背景下，我知道你会喜欢 Ken Robinson 的演讲！去看看：[Ken Robinson：学校扼杀创造力](https://supermemo.guru/wiki/Robinson:_Schools_kill_creativity)！
 
@@ -311,13 +311,19 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 [学习内驱力](https://supermemo.guru/wiki/Learn_drive)在进化中的姗姗来迟表明，它不是神经网络中出现的简单功能（参见：[Biederman](https://supermemo.guru/wiki/Biederman_model) 模型）。否则，它可能很容易出现在鱼类或更早的时候。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)需要一组专用的神经结构，这些神经结构能够在检测到对陈述性知识的连贯结构的增量贡献时，发送奖励信号。这种信号和潜在结构可能在程序性学习和陈述性学习中有所不同。对于不同类别的感官输入，它也可能有所不同。
 
-### 6.16.3 Procedural learning reward
+### 6.16.3 程序性学习奖励
 
-I hypothesized about [circuits that might run procedural learning](http://www.super-memory.com/english/ol/ol_files/refinement_circuitry_in_stochastic_learning.jpg) back in the 1980s. In my [Master's Thesis](http://super-memory.com/english/ol.htm), out of ignorance, I used my own term ["*stochastic learning*"](http://www.super-memory.com/english/ol/ol_memory.htm). I had no idea that two decades earlier, back in 1969, David Marr proposed a theoretical model of the cerebellar cortex that fit my own thinking. In the new millennium, [there is a lot of data to confirm the model](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2805361/).
+在 20 世纪 80 年代，我猜想了一种[可能进行程序性学习的神经网络](http://www.super-memory.com/english/ol/ol_files/refinement_circuitry_in_stochastic_learning.jpg)。在我的[硕士论文](http://super-memory.com/english/ol.htm)中，出于无知，我使用了我自己的术语「[*随机学习*](http://www.super-memory.com/english/ol/ol_memory.htm)」。我不知道的是，早在二十年前，也就是 1969 年，David Marr 提出了一个符合我自己想法的小脑皮理论模型。在新世纪里，[有大量的数据证实了这个模型](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2805361/)。
 
-The idea of a procedural learning circuit is very simple. Imagine you ride a bicycle. You apply your conscious mind to learn individual moves needed to mount the bike and to then continue pedalling. However, once you are on the way, the procedural learning system makes sure you can execute all moves automatically with minimum neural effort without participation of conscious supervision or minimal supervision over a set of [command neurons](https://en.wikipedia.org/wiki/Command_neuron). Procedural learning will determine your [motor program](https://en.wikipedia.org/wiki/Motor_program). This procedural learning system will make minor random adjustments to the sequence of signals sent to the motor system (hence the name "*stochastic learning*"). You can view those random changes as procedural creativity. Each time your bike loses balance, a penalty signal will be sent from the error-detecting network to cancel proposed corrections. That penalty signal will play the role of a teaching signal for the motor program.
+程序性学习神经网络的思想是非常简单的。想象一下你骑自行车。你运用你的意识去学习骑自行车所需的每个动作，然后继续骑车。然而，一旦你在路上，程序性学习系统确保你可以用最少的神经参与自动执行所有的动作，而不需要有意识的监督或只需要最小限度的监督一组[指令神经元](https://en.wikipedia.org/wiki/Command_neuron)。程序性学习将决定你的[运动程序](https://en.wikipedia.org/wiki/Motor_program)。这个程序性学习系统将对发送到运动系统的信号序列进行微小的随机调整（因此被称为「*随机学习*」）。您可以将这些随机调整视为程序性创造力。每当你的自行车失去平衡，一个惩罚信号将从错误检测网络发送，去取消发送的修正。这个惩罚信号将为运动程序起一个指导信号的作用。
 
 During sleep, memories will be reorganized to eliminate the need for conscious input, simplified, optimized, and garbage signals that have a low contribution to the skill will be rejected. With each kilometer cycled, the sequence of signals will be perfected by trial and error. With each bout of sleep the wrinkles will get smoother. Riding a bike will become a pleasure. That pleasure seems to peek in the transition from clumsy conscious rider to a natural.
+
+在睡眠期间，记忆将被重组以消除对有意识输入、简化、优化的需求，对技能贡献不大的垃圾信号将被拒绝。
+随着每一公里的循环，信号序列将通过反复试验而得到完善。
+每睡一次，皱纹就会变得更光滑。
+骑自行车将成为一种乐趣。
+这种快感似乎在从笨拙、有意识的骑手到自然骑手的转变中窥探。
 
 In a similar fashion, with each sentence typed on the computer, you will strike fewer typos. Do you know where ")" is on the keyboard? How about "}"? The more fluent you are in typing, the more likely you are to forget this detail. When the conscious control of motor sequences is taken away, declarative knowledge of the position of ")" on the keyboard may be thrown away as "garbage". It is no longer needed.
 
