--- a/我再也不会把孩子送去学校/06.Learn drive and reward.md
+++ b/我再也不会把孩子送去学校/06.Learn drive and reward.md
@@ -183,7 +183,7 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 >
 > 我有我自己鲜明的例子来说明评估网络在对抗教育系统方面的力量：
 >
-> 1985年，我算出了发展长期记忆所需的知识复习最佳间隔的近似函数。这是就是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的诞生。最初，这个函数是用[笔和纸](http://www.super-memory.com/articles/paper.htm)来实现的。几个月后，我意识到这个系统非常强大。我知道我可以用电脑把它的力量翻倍。然而，我不知道有谁能根据我的函数来编写学习软件。那时候，波兰的所有程序员是要么是在大型机上写 Fortran 或 Cobol 的老家伙，要么是在使用 ZX 81、Commodore 64 或 ZX Spectrum 等微型计算机的越来越多的业余爱好者。我决定自己写这个程序。但是我没有编程技能。我是计算机科学的学生，我向老师寻求帮助。然而，我们唯一的编程课程是 Datapoint 汇编语言。这些技能对于玩玩寄存器得出 11 * 11 = 121非常有用。但我想学习一些对 SuperMemo 编程有用的东西。我的学校一直要求我学习计算电路的电阻，或者学习符号积分。我的知识评估网络产生了一个简单的输出：编程技能——&gt; SuperMemo ——&gt;更快的学习(在所有领域，包括电子或微积分)。我决心学习编程。我的学校决心阻止我(通过要求选修其他必修课程)。无奈之下，我报名了经济大学，该大学开设了算法语言课程。这门课程的重点是 [Pascal](https://en.wikipedia.org/wiki/Pascal_(programming_language))。我不得不在做平时的功课的同时，在额外的时间里学习 Pascal。那门课程不错，但我们都在学习理论。纸上谈兵。当时（1986 年）波兰大学里的个人电脑很少，大多数实用的应用都在名为 [Odra](https://en.wikipedia.org/wiki/Odra_(computer)) 的大型机上运行（从 1960 年开始，为在波兰的苏联集团生产）。当我终于得到了我的第一台电脑：[ZX Spectrum](https://en.wikipedia.org/wiki/ZX_Spectrum)（1986 年 1 月 4 日），我终于可以开始学习编程语言了。在电脑到来之前，我开始写我的第一个程序！在纸上。这是一个组织我一天的计划（类似 [SuperMemo](http://help.supermemo.org/wiki/Plan) 中的计划）。不久之后，我也学会了 Pascal。首先，我必须减少学校的不良影响，减轻课业负担。我和我的电路老师达成了协议。我会为他做一些高通滤波计算，这将是提高我 Pascal 技能的机会。这个程序花了很多小时来写，简直是浪费时间。这是糟糕学习的完美例子。我几乎不明白我自己的程序是如何工作的。然而，这仍然比仅仅学习图解要好。就编程而言，那段学习很好，我的技能提高了很多。
+> 1985年，我算出了发展长期记忆所需的知识复习最佳间隔的近似函数。这是就是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的诞生。最初，这个函数是用[笔和纸](http://www.super-memory.com/articles/paper.htm)来实现的。几个月后，我意识到这个系统非常强大。我知道我可以用电脑把它的力量翻倍。然而，我不知道有谁能根据我的函数来编写学习软件。那时候，波兰的所有程序员是要么是在大型机上写 Fortran 或 Cobol 的老家伙，要么是在使用 ZX 81、Commodore 64 或 ZX Spectrum 等微型计算机的越来越多的业余爱好者。我决定自己写这个程序。但是我没有编程技能。我是计算机科学的学生，我向老师寻求帮助。然而，我们唯一的编程课程是 Datapoint 汇编语言。这些技能对于玩玩寄存器得出 11 * 11 = 121非常有用。但我想学习一些对 SuperMemo 编程有用的东西。我的学校一直要求我学习计算电路的电阻，或者学习符号积分。我的知识评估网络产生了一个简单的输出：编程技能——&gt; SuperMemo ——&gt;更快的学习（在所有领域，包括电子或微积分）。我决心学习编程。我的学校决心阻止我(通过要求选修其他必修课程)。无奈之下，我报名了经济大学，该大学开设了算法语言课程。这门课程的重点是 [Pascal](https://en.wikipedia.org/wiki/Pascal_(programming_language))。我不得不在做平时的功课的同时，在额外的时间里学习 Pascal。那门课程不错，但我们都在学习理论。纸上谈兵。当时（1986 年）波兰大学里的个人电脑很少，大多数实用的应用都在名为 [Odra](https://en.wikipedia.org/wiki/Odra_(computer)) 的大型机上运行（从 1960 年开始，为在波兰的苏联集团生产）。当我终于得到了我的第一台电脑：[ZX Spectrum](https://en.wikipedia.org/wiki/ZX_Spectrum)（1986 年 1 月 4 日），我终于可以开始学习编程语言了。在电脑到来之前，我开始写我的第一个程序！在纸上。这是一个组织我一天的计划（类似 [SuperMemo](http://help.supermemo.org/wiki/Plan) 中的计划）。不久之后，我也学会了 Pascal。首先，我必须减少学校的不良影响，减轻课业负担。我和我的电路老师达成了协议。我会为他做一些高通滤波计算，这将是提高我 Pascal 技能的机会。这个程序花了很多小时来写，简直是浪费时间。这是糟糕学习的完美例子。我几乎不明白我自己的程序是如何工作的。然而，这仍然比仅仅学习图解要好。就编程而言，那段学习很好，我的技能提高了很多。
 >
 > 对那些不懂编程的人来说，很难用语言表达出来，但是大学课程和自己编程之间的知识价值差异相当于李子和木星之间的大小差异。当我的同学们在电子学和计量学方面苦于无聊的讲座时，我已经可创业了。我在学校什么也学不到。我可以在 Pascal 的课外课程中学到一点。然而，只有激情和明确目标支持的实用知识才是重要的。到了 1987 年 12 月，我的努力达到了顶峰，写下了第一版 SuperMemo，这彻底改变了我的人生历程。我的导师 Zbigniew Kierzowski 博士的开明态度让我把我的硕士论文全部奉献给 SuperMemo 这个主题。80 岁生日快乐，Kierzkowski 教授 ！对于一个学生来说，在这个尺度上做出自己的决定，然后再加上论文是用英语写的，这是非常不寻常的。这一事实在今天并不罕见，但它涉及到1989年的一场大规模行政和战术斗争。
 >
@@ -317,15 +317,9 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 程序性学习神经网络的思想是非常简单的。想象一下你骑自行车。你运用你的意识去学习骑自行车所需的每个动作，然后继续骑车。然而，一旦你在路上，程序性学习系统确保你可以用最少的神经参与自动执行所有的动作，而不需要有意识的监督或只需要最小限度的监督一组[指令神经元](https://en.wikipedia.org/wiki/Command_neuron)。程序性学习将决定你的[运动程序](https://en.wikipedia.org/wiki/Motor_program)。这个程序性学习系统将对发送到运动系统的信号序列进行微小的随机调整（因此被称为「*随机学习*」）。您可以将这些随机调整视为程序性创造力。每当你的自行车失去平衡，一个惩罚信号将从错误检测网络发送，去取消发送的修正。这个惩罚信号将为运动程序起一个指导信号的作用。
 
-During sleep, memories will be reorganized to eliminate the need for conscious input, simplified, optimized, and garbage signals that have a low contribution to the skill will be rejected. With each kilometer cycled, the sequence of signals will be perfected by trial and error. With each bout of sleep the wrinkles will get smoother. Riding a bike will become a pleasure. That pleasure seems to peek in the transition from clumsy conscious rider to a natural.
+在睡眠期间，记忆将被重新组织、简化、优化，对有意识的输入的需要会被消除，而对技能贡献不大的垃圾信号将被驳回。随着每一公里的骑行，信号序列将通过反复试验而得到完善。而每次睡眠，褶皱就会变得更光滑。骑自行车将成为一种乐趣。从笨拙的、有意识的骑手到本能的骑手的转变中，这种乐趣可见一斑。
 
-在睡眠期间，记忆将被重组以消除对有意识输入、简化、优化的需求，对技能贡献不大的垃圾信号将被拒绝。
-随着每一公里的循环，信号序列将通过反复试验而得到完善。
-每睡一次，皱纹就会变得更光滑。
-骑自行车将成为一种乐趣。
-这种快感似乎在从笨拙、有意识的骑手到自然骑手的转变中窥探。
-
-In a similar fashion, with each sentence typed on the computer, you will strike fewer typos. Do you know where ")" is on the keyboard? How about "}"? The more fluent you are in typing, the more likely you are to forget this detail. When the conscious control of motor sequences is taken away, declarative knowledge of the position of ")" on the keyboard may be thrown away as "garbage". It is no longer needed.
+以类似的方式，在计算机上键入每个句子时，你的打字错误会越来越少。你知道键盘上的「)」在哪里吗？「}」呢？你打字越流畅，你就越有可能忘记这个细节。当有意识地控制动作顺序消失后时，键盘上「)」位置的陈述性知识可能作为「垃圾」被丢弃。它不再被需要了。
 
 ### 6.16.4 Declarative learning reward
 
